--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,18 +1,11 @@
-<html>
-	<head>
-		<title>dudco's blog</title>
-	</head>
-	<body>
-		<div>
-			<h2>dudco's blog</h>
-		</div>
+{% extends 'blog/base.html' %}
 
-		{% for post in posts %}
-			<div>
-				<p>작성일시 : {{post.published_date}}</p>
-				<h1><a href="">{{post.title}}</a></h1>
-				<p>{{post.text|linebreaksbr}}</p></p>
-			</div>
-		{% endfor %}
-	</body>
-</html>
+{% block content %}
+	{% for post in posts %}
+		<div class="post">
+			<p>작성일시 : {{post.published_date}}</p>
+			<h1><a href="{% url 'post_detail' pk=post.pk %}">{{post.title}}</a></h1>
+			<p>{{post.text|linebreaksbr}}</p></p>
+		</div>
+	{% endfor %}
+{% endblock %}
