--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -12,7 +12,7 @@
 			{% if user.is_authenticated %}
 			<a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
 			{% endif %}
-			<h2>dudco's blog</h>
+			<h2><a href="{% url 'post_list' %}" class="white">dudco's blog</a></h>
 		</div>
 
 		<div class="content container">
